Added HTML_Practice folder with files

--- a/Lab Class-13/Lab Class-13/templates/next.html
+++ b/Lab Class-13/Lab Class-13/templates/next.html
@@ -2,24 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Next Page</title>
 </head>
 <body>
-  
-   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa ea ut iste tenetur 
-   dolor magnam eum? Dolores, eligendi consectetur?
-    Quibusdam consequatur vero aliquam, eum excepturi dolor non rerum sapiente dolorum! 
-
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Ipsa ea ut iste tenetur dolor magnam eum? Dolores, eligendi consectetur?
+        Quibusdam consequatur vero aliquam, eum excepturi dolor non rerum sapiente dolorum!
+    </p>
 
     <button onclick="back()">Back</button>
 
-
-    
-    
     <script src="../js/index.js"></script>
-    
-
-
 </body>
 </html>
