--- a/HTML-Practice/CSS/style.css
+++ b/HTML-Practice/CSS/style.css
@@ -7,10 +7,12 @@ h3 {
 
 .blue-text {
   color: blue;
+   padding: 30px;
 }
 
 .green-text {
   color: green;
   border: 2px solid rgb(119, 41, 201);
   /*margin: 50px;*/
+  margin: 50px;
 }
