--- a/HTML-Practice/CSS/style.css
+++ b/HTML-Practice/CSS/style.css
@@ -40,3 +40,7 @@ a:hover {
   background-position: center;
   padding: 20px;
 }
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
